// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`TextArea should be rendered correctly 1`] = `
<div
  className="container uui-input-box root size-36 mode-form"
>
  <textarea
    className="-clickable noAutoSize uui-input"
    onBlur={[Function]}
    onChange={[Function]}
    onFocus={[Function]}
    value=""
  />
</div>
`;

exports[`TextArea should be rendered correctly 2`] = `
<div
  className="container uui-input-box root size-36 mode-inline"
>
  <textarea
    className="-clickable noAutoSize uui-input"
    maxLength={200}
    onBlur={[Function]}
    onChange={[Function]}
    onFocus={[Function]}
    placeholder="Type here"
    rows={4}
    value=""
  />
</div>
`;
